<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".daftarisi">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftarisi"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="70dp" />


    <Button
        android:id="@+id/bab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bab1"
        android:textColor="@color/black"
        android:backgroundTint="@color/colorbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        app:layout_constraintHorizontal_bias="0.16"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="210dp" />

    <Button
        android:id="@+id/b1kom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kompelktro"
        android:backgroundTint="@color/colorbutton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        app:layout_constraintHorizontal_bias="0.6"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="210dp" />
    <Button
        android:id="@+id/b1an"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analisis"
        android:backgroundTint="@color/colorbutton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="210dp" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bab2"
        android:textColor="@color/black"
        android:backgroundTint="@color/colorbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintHorizontal_bias="0.16"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="360dp" />

    <Button
        android:id="@+id/b2ohm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hukumohm"
        android:textColor="@color/black"
        android:backgroundTint="@color/colorbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:layout_constraintHorizontal_bias="0.27"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="210dp" />

    <Button
        android:id="@+id/b2seri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/resistensiseri"
        android:backgroundTint="@color/colorbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        app:layout_constraintHorizontal_bias="0.37"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="210dp" />

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bab3"
        android:textColor="@color/black"
        android:backgroundTint="@color/colorbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.70"
        app:layout_constraintHorizontal_bias="0.16"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="498dp" />
    <Button
        android:id="@+id/b3sir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorbutton"
        android:textColor="@color/black"
        android:text="@string/sirkuittegangan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        app:layout_constraintHorizontal_bias="0.37"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="210dp" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="home"
        android:backgroundTint="@color/colorbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:layout_constraintHorizontal_bias="0.17"/>

</androidx.constraintlayout.widget.ConstraintLayout>